--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,12 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <!-- <script src="src/Player.js"></script> -->
+  <script src="angular.min.js"></script>
+  <script src="lib/angular-mocks.js"></script>
   <script src="app.js"></script>
 
   <!-- include spec files here... -->
-  <!-- <script src="spec/SpecHelper.js"></script> -->
+  <script src="spec/ControllersSpec.js"></script>
   <!-- <script src="spec/PlayerSpec.js"></script> -->
 
 </head>
